--- a/app/views/feedback.pug
+++ b/app/views/feedback.pug
@@ -3,7 +3,7 @@
 extends layout
 block content
     h4 Testimonials 
-    .container-fluid
+    .container
         each ts in test
             .row 
                 | "#{ts.testimonial}"
