A lot more updates, fonts, pics, etc

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,5 +1,6 @@
-body {
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Righteous&display=swap");
+body.container-fluid {
+  font: 14px 'Righteous', cursive;
 }
 a:select {
   color: #800080;
@@ -14,18 +15,19 @@ li.nav-item.nav-link.active:hover {
 }
 /** End of Header page */
 .menuItem:hover {
-  font-style: italic;
   font-size: larger;
 }
 .header {
   font: bolder;
 }
-.formStyle {
-  width: 50%;
-}
 #formPic {
   height: 75%;
   width: 75%;
+}
+/* End of Admin Login */
+.officeSpace {
+  height: 50%;
+  width: 50%;
 }
 #message {
   background-color: #008000;
