--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -1,5 +1,7 @@
-body 
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+@import url('https://fonts.googleapis.com/css?family=Righteous&display=swap')
+
+body.container-fluid 
+    font: 14px 'Righteous', cursive
 
 a:select
     color: purple  
@@ -16,18 +18,28 @@ li.nav-item.nav-link.active:hover
 /** End of Header page */
 
 .menuItem:hover
-    font-style: italic
     font-size: larger
 
 .header
     font: bolder
 
-.formStyle
-    width: 50%
+// .formStyle
+//     text-align: center
+//     position: absolute
+//     left: 50%
+//     right: 50%
+//     transform: translate(-50%, -50%)
 
 #formPic
     height: 75%
     width: 75%
+
+/* End of Admin Login */
+
+.officeSpace
+    height: 50%
+    width: 50%
+
 
 #message
     background-color: green 
