--- a/app/views/adminSuccess.pug
+++ b/app/views/adminSuccess.pug
@@ -2,10 +2,15 @@
 
 extends layout
 block content
-    a(href='/viewCustomRequests') View Custom Requests
-    br
-    a(href='/viewStandardRequests') View Standard Requests
-    br
-    a(href='/viewRegisteredUsers') View Registered Users 
-    br  
-    a(href='/adminLogin') Back  
+    .container
+        .row
+            .col-10
+                img(src='./images/officeSpace.jpg').img-thumbnail.officeSpace
+            .col-2
+                a(href='/viewCustomRequests').menuItem View Custom Requests
+                hr
+                a(href='/viewStandardRequests').menuItem View Standard Requests
+                hr
+                a(href='/viewRegisteredUsers').menuItem View Registered Users 
+        .text-right
+            a(href='/adminLogin') Back  
