--- a/app/views/gallery.pug
+++ b/app/views/gallery.pug
@@ -3,9 +3,26 @@
 extends layout
 block content
     .container 
+        h4.text-center We Love to Clean!
         .row 
-            h4 Before &amp; After
             .col
-                
+                img(src='./images/cleaning1.webp').img-thumbnail 
             .col 
-            
+                img(src='./images/cleaning2.webp').img-thumbnail
+            .col
+                img(src='./images/cleaning3.webp').img-thumbnail
+        .row
+            .col
+                img(src='./images/cleaning4.webp').img-thumbnail
+            .col
+                img(src='./images/cleaning5.webp').img-thumbnail
+        .row
+            .col
+                img(src='./images/cleaning6.webp').img-thumbnail
+            .col
+                img(src='./images/cleaning7.webp').img-thumbnail
+            .col
+                img(src='./images/cleaning8.webp').img-thumbnail
+        .row
+            .col
+                img(src='./images/cleaning9.webp').img-thumbnail
