--- a/app/views/home.pug
+++ b/app/views/home.pug
@@ -7,7 +7,7 @@ block content
             h3.text-center Your only stop for the best cleaning services!! Check us out!!
         .row
             .col-10
-                #carouselPicsContainer.carousel.slide.container(data-ride='carousel')
+                #carouselPicsContainer.carousel.slide.container(data-ride='carousel').img-thumbnail
                     .carousel-inner
                         .carousel-item.active
                             img.d-block.w-100(src='/images/clean1.jpg')
