--- a/app/views/savedCustomRequest.pug
+++ b/app/views/savedCustomRequest.pug
@@ -2,5 +2,7 @@
 
 extends layout 
 block content
-    h6 Your custom request has been submitted!! Please allow one business day for a follow up phone call to confirm your request.
-    a(href='/Quote') Back 
+    .container.text-center
+        h4 Thank you!! Your custom request has been submitted!! Please allow one business day for a follow up phone call to confirm your request.
+        .text-right
+            a(href='/Quote') Back 
