--- a/app/views/savingRegisteredUsers.pug
+++ b/app/views/savingRegisteredUsers.pug
@@ -2,6 +2,7 @@
 
 extends layout
 block content
-    h4 Your registration has been saved. You will now be redirected to the login page.
-    script
-        |window.setTimeout(function(){location.assign('/login')}, 4000);
+    .container
+        h4 Your registration has been saved. You will now be redirected to the login page.
+        script
+            |window.setTimeout(function(){location.assign('/login')}, 4000);
