--- a/app/views/savingStandardRequest.pug
+++ b/app/views/savingStandardRequest.pug
@@ -2,5 +2,7 @@
 
 extends layout
 block content 
-    .container 
-        h4 Your standard request has been received! Please allow one business day for a follow up phone call. 
+    .container.text-center
+        h4 Thank you!! Your standard request has been received! Please allow one business day for a follow up phone call.
+        .text-right
+            a(href='/Quote') Back
