--- a/app/views/viewStandardRequests.pug
+++ b/app/views/viewStandardRequests.pug
@@ -2,18 +2,20 @@
 
 extends layout 
 block content
-    h4 Standard Requests
-    each sr in stdReq
-        |Name: #{sr.name}
-        br
-        |Email: #{sr.email}
-        br
-        |Phone: #{sr.stdPhone}
-        br
-        |Selected Package: #{sr.stdSelectedPkg}
-        br
-        |Selected Frequency: #{sr.stdSelectedFreq}
-        br
-        |Selected Price: #{sr.stdSelectedPrice}
-        hr
-    a(href='/adminSuccess') Back 
+    .container
+        h4.text-center Standard Requests
+        each sr in stdReq
+            |Name: #{sr.name}
+            br
+            |Email: #{sr.email}
+            br
+            |Phone: #{sr.stdPhone}
+            br
+            |Selected Package: #{sr.stdSelectedPkg}
+            br
+            |Selected Frequency: #{sr.stdSelectedFreq}
+            br
+            |Selected Price: #{sr.stdSelectedPrice}
+            hr
+        .text-right
+            a(href='/adminSuccess') Back 
