--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -5,6 +5,7 @@ html
     block head
       link(rel='stylesheet', href='/stylesheets/style.css')
       link(rel='stylesheet', href='/stylesheets/css/bootstrap.css')
+      link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Vibes&display=swap')
   block header
     include ./includes/header.pug
   body.container-fluid
