--- a/app/views/loginSuccess.pug
+++ b/app/views/loginSuccess.pug
@@ -2,4 +2,12 @@
 
 extends layout
 block content
-    h4 Login successful 
+    h4 Login successful
+    .container
+        .row
+            .col-10
+                //- Request new services
+            .col-2
+                a(href='/viewPastServices').menuItem View Past Services
+                hr
+                a(href='/viewUpcomingServices').menuItem View Upcoming Services
