--- a/app/views/requestQuote.pug
+++ b/app/views/requestQuote.pug
@@ -65,5 +65,5 @@ block content
                         br
                     .row
                         input(type='submit').btn.form-control
-            .col
+            //-.col
                 img(src='./images/form.png')#formPic.img-fluid
