--- a/app/views/viewStandardRequests.pug
+++ b/app/views/viewStandardRequests.pug
@@ -4,18 +4,34 @@ extends layout
 block content
     .container
         h4.text-center Standard Requests
-        each sr in stdReq
-            |Name: #{sr.name}
-            br
-            |Email: #{sr.email}
-            br
-            |Phone: #{sr.stdPhone}
-            br
-            |Selected Package: #{sr.stdSelectedPkg}
-            br
-            |Selected Frequency: #{sr.stdSelectedFreq}
-            br
-            |Selected Price: #{sr.stdSelectedPrice}
-            hr
+        table.table.table-striped.table-bordered
+            tr
+                th Name
+                th Email
+                th Phone
+                th Selected Package
+                th Selected Frequency
+                th Selected Price
+            each sr in stdReq
+                tr
+                    td #{sr.name}
+                    td #{sr.email}
+                    td #{sr.stdPhone}
+                    td #{sr.stdSelectedPkg}
+                    td #{sr.stdSelectedFreq}
+                    td #{sr.stdSelectedPrice}
+        //- each sr in stdReq
+        //-     |Name: #{sr.name}
+        //-     br
+        //-     |Email: #{sr.email}
+        //-     br
+        //-     |Phone: #{sr.stdPhone}
+        //-     br
+        //-     |Selected Package: #{sr.stdSelectedPkg}
+        //-     br
+        //-     |Selected Frequency: #{sr.stdSelectedFreq}
+        //-     br
+        //-     |Selected Price: #{sr.stdSelectedPrice}
+        //-     hr
         .text-right
             a(href='/adminSuccess') Back 
