--- a/app/views/viewRegisteredUsers.pug
+++ b/app/views/viewRegisteredUsers.pug
@@ -4,15 +4,23 @@ extends layout
 block content
     h4.text-center Registered Users
     .container
-        each ru in regUsr
-            .row
-                .col #{ru.firstname}
-                .col #{ru.lastname}
-                .col #{ru.email}
-                .col #{ru.phone}
-                .col #{ru.username}
-                .col #{ru.password}
-                .col #{ru.selection}
-            hr 
+        table.table.table-striped.table-bordered
+            tr
+                th First Name
+                th Last Name
+                th Email
+                th Phone
+                th Username
+                th Password
+                th Selection
+            each ru in regUsr
+                tr
+                    td #{ru.firstname}
+                    td #{ru.lastname}
+                    td #{ru.email}
+                    td #{ru.phone}
+                    td #{ru.username}
+                    td #{ru.password}
+                    td #{ru.selection}
         .text-right
             a(href='/adminSuccess') Back 
