--- a/app/views/loginSuccess.pug
+++ b/app/views/loginSuccess.pug
@@ -11,3 +11,5 @@ block content
                 a(href='/viewPastServices').menuItem View Past Services
                 hr
                 a(href='/viewUpcomingServices').menuItem View Upcoming Services
+                hr
+                a(href='/leaveFeedback').menuItem Leave Feedback
