Made some updates to fix selection, frequency, and price display issues

--- a/app/views/register.pug
+++ b/app/views/register.pug
@@ -4,7 +4,7 @@ extends layout
 block append header
     script(src='../javascripts/jsFunctions.js')
 block content
-    h4 Register Here:
+    h4.text-center Register Here:
     .container 
         form(action='/savingRegisteredUsers' method='post').form-group
             .row
