Adjusted centering of some page titles and modified standard requests

--- a/app/views/feedback.pug
+++ b/app/views/feedback.pug
@@ -2,7 +2,7 @@
 
 extends layout
 block content
-    h4 Testimonials 
+    h4.text-center Testimonials 
     .container
         each ts in test
             .row 
