Updated gallery page

--- a/app/views/gallery.pug
+++ b/app/views/gallery.pug
@@ -6,23 +6,23 @@ block content
         h4.text-center We Love to Clean!
         .row 
             .col
-                img(src='./images/cleaning1.webp').img-thumbnail 
+                img(src='./images/cleaning1.jpg').img-thumbnail 
             .col 
-                img(src='./images/cleaning2.webp').img-thumbnail
+                img(src='./images/cleaning2.jpg').img-thumbnail
             .col
-                img(src='./images/cleaning3.webp').img-thumbnail
+                img(src='./images/cleaning3.jpg').img-thumbnail
         .row
             .col
-                img(src='./images/cleaning4.webp').img-thumbnail
+                img(src='./images/cleaning4.jpg').img-thumbnail
             .col
-                img(src='./images/cleaning5.webp').img-thumbnail
+                img(src='./images/cleaning5.jpg').img-thumbnail
         .row
             .col
-                img(src='./images/cleaning6.webp').img-thumbnail
+                img(src='./images/cleaning6.jpg').img-thumbnail
             .col
-                img(src='./images/cleaning7.webp').img-thumbnail
+                img(src='./images/cleaning7.jpg').img-thumbnail
             .col
-                img(src='./images/cleaning8.webp').img-thumbnail
+                img(src='./images/cleaning8.jpg').img-thumbnail
         .row
             .col
-                img(src='./images/cleaning9.webp').img-thumbnail
+                img(src='./images/cleaning9.jpg').img-thumbnail
